# python-lenses

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  LICENSE  custom.py  pyproject.toml  readme.md  readme.rst  runtests.sh  setup.cfg  setup.py  tox.ini
.hypothesis/: examples.db
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
docs/tutorial/: compose.rst  index.rst  intro.rst  optics.rst
examples/: naughts_and_crosses.py  robots.py
lenses/: __init__.py  baselens.py  boundlens.py  const.py  functor.py  functorisor.py  hooks.py  identity.py  lens.py  maybe.py  methodlens.py  setter.py  simplelens.py  typeclass.py  typevars.py  ui.py  userlens.py
lenses/hooks/: __init__.py  frozendict.py  hook_funcs.py  pyrsistent.py
lenses/optics/: __init__.py  base.py  folds.py  getters.py  isomorphisms.py  prisms.py  setters.py  traversals.py  true_lenses.py
lenses/ui/: __init__.py  base.py  state_func.py
tests/: test_baselens.py  test_const.py  test_frozendict.py  test_functorisor.py  test_hooks.py  test_identity.py  test_lens.py  test_maybe.py  test_methodlens.py  test_optics.py  test_pyrsistent.py  test_setter.py  test_simplelens.py  test_typeclass.py  test_typeclass_laws.py  test_userlens.py
tutorial/: compose.md  index.md  index.rst  intro.md  methods.md  methods.rst  optics.md  optics.rst
