[metadata]
name = lenses
version = 1.1.0
url = https://github.com/ingolemo/python-lenses
author = Adrian Room
author_email = ingolemo@gmail.com
description = A lens library for python
long_description = file:readme.rst
license = GPLv3+
license_files = LICENSE
keywords = lens,lenses,immutable,functional,optics
classifiers =
	Development Status :: 3 - Alpha,
	Intended Audience :: Developers,
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+),
	Natural Language :: English,
	Programming Language :: Python :: 3,
	Programming Language :: Python :: 3.6,
	Programming Language :: Python :: 3.7,
	Programming Language :: Python :: 3.8,
	Programming Language :: Python :: 3.9,
	Programming Language :: Python :: Implementation :: CPython,
	Programming Language :: Python :: Implementation :: PyPy,
	Topic :: Software Development :: Libraries,

[options]
packages = find:
python_requires = >=3.6, <4
setup_requires =
	setuptools >=30.3.0
install_requires =
	dataclasses; python_version == "3.6"

[options.packages.find]
exclude = tests

[options.extras_require]
docs =
	sphinx
optional =
	pyrsistent
lints =
	black
	flake8
	mypy; implementation_name == "cpython"
	types-dataclasses; python_version=="3.6"
tests =
	pytest
	pytest-sugar
	coverage
	pytest-coverage
	hypothesis
